[gd_scene load_steps=24 format=3 uid="uid://cuoknv85ogn14"]

[ext_resource type="Texture2D" uid="uid://dv7ht2ywppt40" path="res://Assets/MapPieces/TilesetTest.png" id="1_7jera"]
[ext_resource type="Script" path="res://Assets/MapGeneration/Level1Map.gd" id="1_onkc4"]
[ext_resource type="PackedScene" uid="uid://gwmo12xsoi64" path="res://Assets/Player/Player.tscn" id="1_wmuxj"]
[ext_resource type="Script" path="res://Assets/MapGeneration/RandomNumGen.gd" id="3_3i8qs"]
[ext_resource type="Texture2D" uid="uid://bqvm7b5y8gdtk" path="res://Assets/MapPieces/Wall.png" id="3_tdcge"]
[ext_resource type="PackedScene" uid="uid://p2pwqg2lxk1t" path="res://Assets/MapGeneration/room_type_1.tscn" id="4_jjuqo"]
[ext_resource type="Texture2D" uid="uid://cvb1y3842yai2" path="res://Assets/MapPieces/Wall_topper.png" id="4_v3t7s"]
[ext_resource type="PackedScene" uid="uid://d2yvbfjtsdnmf" path="res://Assets/MapGeneration/room_type_2.tscn" id="5_1861j"]
[ext_resource type="PackedScene" uid="uid://fvo5m8ehqjvf" path="res://Assets/MapGeneration/room_type_3.tscn" id="6_g0a03"]
[ext_resource type="PackedScene" uid="uid://drhey6qyj8l5g" path="res://Assets/MapGeneration/room_type_4.tscn" id="7_5u8qm"]
[ext_resource type="PackedScene" uid="uid://6y02js3m5kqw" path="res://Assets/MapGeneration/room_type_5.tscn" id="8_fakkf"]
[ext_resource type="PackedScene" uid="uid://d3pwwkoodk366" path="res://Assets/MapGeneration/room_type_6.tscn" id="9_ns6r4"]
[ext_resource type="PackedScene" uid="uid://bmspydsb82e0" path="res://Assets/MapGeneration/room_type_7.tscn" id="10_bue6o"]
[ext_resource type="PackedScene" uid="uid://durdc0tm762gw" path="res://Assets/MapGeneration/room_type_8.tscn" id="11_7k3bc"]
[ext_resource type="PackedScene" uid="uid://cy2edqj8p1fkl" path="res://Assets/Items/item_1.tscn" id="13_cekwt"]
[ext_resource type="PackedScene" uid="uid://dwrarsoq122f0" path="res://Assets/inventory.tscn" id="14_fgykl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6fg5x"]
texture = ExtResource("1_7jera")
separation = Vector2i(2, 2)
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m227y"]
texture = ExtResource("3_tdcge")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:0/0 = 0
4:1/0 = 0
4:2/0 = 0
4:3/0 = 0
4:4/0 = 0
4:5/0 = 0
4:6/0 = 0
4:7/0 = 0
5:7/0 = 0
6:6/0 = 0
6:5/0 = 0
5:4/0 = 0
5:3/0 = 0
5:2/0 = 0
5:1/0 = 0
5:0/0 = 0
6:0/0 = 0
6:1/0 = 0
6:2/0 = 0
6:3/0 = 0
6:4/0 = 0
6:7/0 = 0
7:7/0 = 0
7:6/0 = 0
7:5/0 = 0
7:4/0 = 0
7:3/0 = 0
7:2/0 = 0
7:1/0 = 0
7:0/0 = 0
5:5/0 = 0
5:6/0 = 0
3:7/0 = 0
2:7/0 = 0
2:6/0 = 0
2:5/0 = 0
3:5/0 = 0
3:4/0 = 0
1:6/0 = 0
1:7/0 = 0
0:7/0 = 0
0:6/0 = 0
0:5/0 = 0
0:4/0 = 0
1:4/0 = 0
1:5/0 = 0
2:4/0 = 0
3:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_cxxot"]
texture = ExtResource("4_v3t7s")
texture_region_size = Vector2i(64, 16)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_4wb0i"]
sources/0 = SubResource("TileSetAtlasSource_6fg5x")
sources/1 = SubResource("TileSetAtlasSource_m227y")
sources/2 = SubResource("TileSetAtlasSource_cxxot")

[sub_resource type="Shader" id="Shader_awpjp"]
code = "shader_type canvas_item;

void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	// Called for every pixel the material is visible on.
}

//void light() {
	// Called for every pixel for every light affecting the CanvasItem.
	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t2e13"]
shader = SubResource("Shader_awpjp")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ob66"]
size = Vector2(160, 128)

[node name="First Floor" type="Node2D"]
script = ExtResource("1_onkc4")

[node name="TileMap" type="TileMap" parent="."]
visible = false
position = Vector2(-4, 58)
scale = Vector2(0.5, 0.5)
tile_set = SubResource("TileSet_4wb0i")
format = 2
layer_0/tile_data = PackedInt32Array(2359323, 1, 0, 2359327, 1, 0, 2359359, 1, 0, 2359363, 1, 0, 2359371, 1, 0, 2359375, 1, 0, 4194383, 1, 0, 4194379, 1, 0)

[node name="Entry??" type="Panel" parent="."]
material = SubResource("ShaderMaterial_t2e13")
offset_left = 258.0
offset_top = 686.0
offset_right = 592.0
offset_bottom = 805.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
show_behind_parent = true
position = Vector2(419, 750)
shape = SubResource("RectangleShape2D_3ob66")

[node name="GenHolder" type="Node2D" parent="."]
script = ExtResource("3_3i8qs")

[node name="RoomType1" parent="GenHolder" instance=ExtResource("4_jjuqo")]
offset_left = 200.0
offset_top = 238.0
offset_right = 360.0
offset_bottom = 366.0

[node name="RoomType2" parent="GenHolder" instance=ExtResource("5_1861j")]
offset_left = 488.0
offset_top = 238.0
offset_right = 648.0
offset_bottom = 366.0

[node name="RoomType3" parent="GenHolder" instance=ExtResource("6_g0a03")]

[node name="RoomType4" parent="GenHolder" instance=ExtResource("7_5u8qm")]
offset_left = 200.0
offset_top = 462.0
offset_right = 360.0
offset_bottom = 590.0

[node name="RoomType5" parent="GenHolder" instance=ExtResource("8_fakkf")]
offset_left = 13.0
offset_top = 7.0
offset_right = 173.0
offset_bottom = 135.0

[node name="RoomType6" parent="GenHolder" instance=ExtResource("9_ns6r4")]
offset_left = 488.0
offset_top = 462.0
offset_right = 648.0
offset_bottom = 590.0

[node name="RoomType7" parent="GenHolder" instance=ExtResource("10_bue6o")]

[node name="RoomType8" parent="GenHolder" instance=ExtResource("11_7k3bc")]
offset_left = -692.0
offset_top = 140.0
offset_right = -532.0
offset_bottom = 268.0

[node name="Spawn" type="Node2D" parent="."]
position = Vector2(422, 670)

[node name="Player" parent="." instance=ExtResource("1_wmuxj")]
position = Vector2(427, 506)

[node name="Item1" parent="." instance=ExtResource("13_cekwt")]
position = Vector2(424, 399)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Inventory" parent="UI" instance=ExtResource("14_fgykl")]
visible = false
